# humantone-python

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
src/humantone/: __init__.py  _async_http.py  _http.py  _retry.py  _user_agent.py  async_client.py  client.py  errors.py  models.py
tests/: conftest.py  test_async_client.py  test_client.py  test_error_parser.py  test_errors.py  test_imports.py  test_models.py  test_retry.py  test_user_agent.py
tests/fixtures/: account_200.json  detect_200.json  detect_daily_limit.json  error_400_not_enough_credits.json  humanize_200.json
tests/integration/: test_live.py
