[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humantone-sdk"
dynamic = ["version"]
description = "Official Python SDK for the HumanTone API. Humanize AI-generated text and check AI likelihood."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "HumanTone", email = "dev@humantone.io" }]
keywords = [
    "humantone",
    "ai",
    "humanize",
    "ai-humanizer",
    "ai-detector",
    "openai-alternative",
    "seo",
    "content",
    "text-generation",
    "nlp",
    "api-client",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
async = ["httpx>=0.27"]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "pytest-asyncio>=0.23",
    "responses>=0.25",
    "respx>=0.20",
    "mypy>=1.8",
    "ruff>=0.4",
    "types-requests",
    "build",
    "twine",
    "hatchling",
]

[project.urls]
Homepage = "https://humantone.io"
Repository = "https://github.com/humantone/humantone-python"
Issues = "https://github.com/humantone/humantone-python/issues"
Documentation = "https://humantone.io/docs/api/"
Changelog = "https://github.com/humantone/humantone-python/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/humantone/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/humantone"]

[tool.hatch.build.targets.sdist]
include = [
    "src/humantone",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.mypy]
strict = true
files = ["src/humantone"]
python_version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers -m 'not integration'"
testpaths = ["tests"]
markers = [
    "integration: requires HUMANTONE_TEST_API_KEY env var (deselected by default)",
]

[tool.coverage.run]
source = ["humantone"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
